--- a/src/style/AnimatedCard.css
+++ b/src/style/AnimatedCard.css
@@ -1,18 +1,15 @@
 .card-wrapper {
   position: relative;
-  width: 100%;
-  height: 100%;
-  /* overflow: hidden; */
-  border-radius: 16px;
   transition: transform 0.4s ease;
 }
 
 .card {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   padding: 20px;
-  border-radius: 16px;
+  border-radius: 32px;
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   transition: all 1.5s ease;
@@ -20,51 +17,107 @@
 }
 
 .primary-card {
-  background-color: #f97373;
   z-index: 2;
   transform: translateX(0%);
   opacity: 1;
-  display: flex;
 }
 
-.card-wrapper:hover .primary-card {
-  transform: translateX(-120%);
+.primary-card.image-left,
+.secondary-card.image-left {
+  background-color: #F45B5B;
+}
+
+.primary-card.image-right,
+.secondary-card.image-right {
+  background-color: #5492A0;
+}
+
+.card-wrapper:hover .primary-card.image-left {
+  transform: translateX(-100%);
   opacity: 0;
 }
 
-.secondary-card {
-  background-color: #fee2e2;
-  z-index: 1;
+.card-wrapper:hover .primary-card.image-right {
+  transform: translateX(-50%);
   opacity: 0;
-  transform: translateX(30px);
-  pointer-events: none;
 }
 
 .card-wrapper:hover .secondary-card {
   opacity: 1;
-  transform: scale(1);
-  pointer-events: auto;
-  z-index: 3;
 }
 
+.secondary-card {
+  z-index: 1;
+  opacity: 0;
+  pointer-events: none;
+}
 
 img {
-  width: 80px;
-  margin-bottom: 12px;
+  width: 342px;
+  border-bottom-left-radius: 23px;
+  height: 343px;
 }
 
-.subtitle {
-  font-weight: 600;
-  margin: 4px 0;
+.card-img {
+  flex-shrink: 0;
+  /* margin-right: 12px; */
+}
+
+.left.card-img {
+  position: relative;
+  width: 255px;
+  height: 335px;
+  top: 10%;
+  right: 15%;
+  animation: moveUpDown 2.5s ease-in-out infinite;
+}
+
+.right.card-img {
+  position: relative;
+  width: 180px;
+  height: 367px;
+  top: 10%;
+  left: 7%;
+  animation: moveUpDown 2.5s ease-in-out infinite;
+
+}
+
+.image-left .card-text {
+  text-align: end;
+}
+
+.image-right .card-text {
+  text-align: start;
+}
+
+ .primary-card .card-text h2 {
+  font-size: 32px;
+  font-weight: 700;
+  color: #FAFAFA;
+  margin: 0;
+}
+
+.primary-card.image-left .subtitle {
+  right: 15%;
+  width: 116%;
+}
+
+.primary-card .subtitle {
+  color: white;
+  position: relative;
+  font-size: 24px;
+  font-weight: 500;
+  margin: 6px 0;
 }
 
 .description {
-  font-size: 14px;
+  color: #FAFAFA;
+  font-size: 16px;
   opacity: 0.8;
   line-height: 1.5;
 }
 
-.arrow-button {
+.secondary-card.image-right .arrow-button {
   position: absolute;
   bottom: 12px;
   right: 16px;
@@ -72,4 +125,11 @@ img {
   border: none;
   font-size: 20px;
   cursor: pointer;
+}
+
+
+@keyframes moveUpDown {
+  0% { transform: translateY(0); }
+  50% { transform: translateY(-15px); }
+  100% { transform: translateY(0); }
 }
