--- a/src/style/Features.css
+++ b/src/style/Features.css
@@ -7,12 +7,13 @@
 .journey-container .main-title {
   font-size: 24px;
   font-weight: 500;
-  /* margin: 0; */
 }
 
 .journey-container h1 {
   font-size: 32px;
   font-weight: 700;
+  margin: 0;
+  margin-bottom: 20px;
 }
 
 .journey-container .main-title,
