--- a/src/style/CourseStatus.css
+++ b/src/style/CourseStatus.css
@@ -28,7 +28,7 @@
   flex-wrap: wrap;
 }
 
-.card {
+.course-card {
   border-radius: 24px;
   padding: 24px;
   box-sizing: border-box;
@@ -70,6 +70,18 @@
   font-size: 64px;
   margin: 0;
   line-height: 1;
+}
+
+.number-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.plus-icon {
+  position: absolute;
+  top: -16px;
+  right: -13px;
+  font-weight: bold;
 }
 
 .course-number span {
@@ -117,6 +129,14 @@
   text-align: center;
 }
 
-.vertical-number span {
+.vertical-number-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.vertical-plus-icon {
   font-size: 24px;
+  position: absolute;
+  top: -10px;
+  right: -10px;
 }
